--- a/scratch_stats.ipynb
+++ b/scratch_stats.ipynb
@@ -1124,14 +1124,20 @@
    ],
    "source": [
     "rejected,corr_pvals = fdrcorrection(pvals, alpha=0.05, method='indep', is_sorted=False)\n",
-    "rejected"
+    "rejectedparticipant_id \tdataset \tage \tsex \tage_seizure_onset \tage_ep_diagnosis \tep_duration_first_scan \tseizure_duration_first_scan \tpnes \tbenign_rolandic \t... \tNFC_Limbic \tNFC_Cont \tNFC_Default \tNSC_Vis \tNSC_SomMot \tNSC_DorsAttn \tNSC_SalVentAttn \tNSC_Limbic \tNSC_Cont \tNSC_Default\n",
+    "341 \tsub-004 \tLOBE \tNaN \tNaN \tNaN \tNaN \tNaN \tNaN \tNaN \tNaN \t... \t0.018775 \t0.041168 \t0.005356 \t4.579539 \t4.814665 \t8.650834 \t7.161025 \t6.553801 \t7.372455 \t8.310777\n",
+    "342 \tsub-006 \tLOBE \t9.0 \tM \t7.0 \t8.0 \t1.0 \t2.0 \t0.0 \t0.0 \t... \t0.242738 \t0.337645 \t0.289935 \t4.145457 \t4.446113 \t7.507796 \t7.520987 \t6.103175 \t7.077718 \t7.506009\n",
+    "343 \tsub-007 \tLOBE \t9.0 \tF \t7.0 \t7.0 \t2.0 \t2.0 \t0.0 \t0.0 \t... \t0.040016 \t0.055915 \t0.013688 \t4.204648 \t4.599075 \t7.685924 \t7.358690 \t6.379661 \t7.868797 \t8.170206\n",
+    "344 \tsub-009 \tL"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "id": "e47e99b0-fdee-43c9-a15d-44599c8c6158",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2214,7 +2220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
