updated conn to tabular notebook
has values hardcoded in it, had to change atlas to brainettome and
change den-32k to den-91k

--- a/workflow/notebooks/add_conn_to_tabular.py.ipynb
+++ b/workflow/notebooks/add_conn_to_tabular.py.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "#first load up the label dseg table\n",
-    "atlas='schaefer'\n",
+    "atlas='brainnetome'\n",
     "\n",
     "df_labels = pd.read_csv(f'resources/atlas/atlas-{atlas}_dseg.tsv',sep='\\t')\n",
     "df_labels\n",
@@ -82,9 +82,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fc_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-schaefer_bold.pconn.nii'\n",
-    "sc_pattern='results/{dataset}/sub-{subject}/dwi/sub-{subject}_den-32k_atlas-schaefer_struc.pconn.nii'\n",
-    "sfc_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-schaefer_sfc.pscalar.nii'\n",
+    "fc_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-91k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-brainnetome_bold.pconn.nii'\n",
+    "sc_pattern='results/{dataset}/sub-{subject}/dwi/sub-{subject}_den-91k_atlas-brainnetome_struc.pconn.nii'\n",
+    "sfc_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-91k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-brainnetome_sfc.pscalar.nii'\n",
     "\n",
     "\n"
    ]
@@ -428,9 +428,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fc_network_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-schaefer_netbold.pconn.nii'\n",
-    "sc_network_pattern='results/{dataset}/sub-{subject}/dwi/sub-{subject}_den-32k_atlas-schaefer_netstruc.pconn.nii'\n",
-    "sfc_network_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-schaefer_netsfc.pconn.nii'\n",
+    "fc_network_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-91k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-brainnetome_netbold.pconn.nii'\n",
+    "sc_network_pattern='results/{dataset}/sub-{subject}/dwi/sub-{subject}_den-91k_atlas-brainnetome_netstruc.pconn.nii'\n",
+    "sfc_network_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-91k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-brainnetome_netsfc.pconn.nii'\n",
     "\n",
     "\n",
     "datasets=['HCP','LOBE']"
