--- a/notebooks/scratch_flipping_hemis.ipynb
+++ b/notebooks/scratch_flipping_hemis.ipynb
@@ -123,7 +123,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
+   "id": "2c2c697f-a178-4c8b-8943-3db3a75ba0ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# averaging left and right parcels to average across HCP\n",
+    "\n",
+    "df = pd.read_csv('../resources/tabular/tabular_withconn_hcp_renamed.tsv',sep='\\t')\n",
+    "\n",
+    "# Loop over all columns to find pairs of 'ipsi' and 'contra' columns\n",
+    "for col in df.columns:\n",
+    "    # Split the column name into parts\n",
+    "    parts = col.split('_')\n",
+    "    \n",
+    "    # Ensure the column name has the expected format of 'prefix_side_suffix'\n",
+    "    if len(parts) == 3:\n",
+    "        prefix = parts[0]  # e.g., 'RSFC'\n",
+    "        side = parts[1]    # 'ipsi' or 'contra'\n",
+    "        suffix = parts[2]  # e.g., 'A8m'\n",
+    "        \n",
+    "        # Create a base name (e.g., 'RSFC_A8m')\n",
+    "        base_name = f\"{prefix}_{suffix}\"\n",
+    "        \n",
+    "        # Check if the opposite side column exists\n",
+    "        opposite_side = 'ipsi' if side == 'contra' else 'contra'\n",
+    "        opposite_col = f\"{prefix}_{opposite_side}_{suffix}\"\n",
+    "        \n",
+    "        # If both 'ipsi' and 'contra' columns exist, average the values and overwrite them\n",
+    "        if opposite_col in df.columns:\n",
+    "            # Average the values of both columns\n",
+    "            df[col] = (df[col] + df[opposite_col]) / 2\n",
+    "            df[opposite_col] = df[col]  # Also set the opposite side column to the same value\n",
+    "\n",
+    "# Now, df contains the averaged values in place of the original columns\n",
+    "df.head()  # Display the first few rows of the updated DataFrame\n",
+    "\n",
+    "\n",
+    "# Optionally, save the updated DataFrame back to a TSV file\n",
+    "df.to_csv('../resources/tabular/tabular_withconn_hcp_averaged.tsv',sep='\\t', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "57710a43-e794-48d9-ac33-09ec5a20487d",
    "metadata": {},
    "outputs": [],
@@ -131,7 +174,7 @@
     "# put together hcp, left and right renamed\n",
     "\n",
     "# Read the input TSV files\n",
-    "df1 = pd.read_csv('../resources/tabular/tabular_withconn_hcp_renamed.tsv', sep='\\t')\n",
+    "df1 = pd.read_csv('../resources/tabular/tabular_withconn_hcp_averaged.tsv', sep='\\t')\n",
     "df2 = pd.read_csv('../resources/tabular/tabular_withconn_left_renamed.tsv', sep='\\t')\n",
     "df3 = pd.read_csv('../resources/tabular/tabular_withconn_right_renamed.tsv', sep='\\t')\n",
     "\n",
@@ -141,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "0a2591f7-6ae6-4f4f-b7f9-e4515c325e71",
    "metadata": {},
    "outputs": [
@@ -528,7 +571,7 @@
        "[358 rows x 708 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "6432079f-a371-4b55-a3f7-e08b177b6354",
    "metadata": {},
    "outputs": [],
