--- a/workflow/notebooks/add_conn_to_tabular.py.ipynb
+++ b/workflow/notebooks/add_conn_to_tabular.py.ipynb
@@ -60,7 +60,8 @@
    "outputs": [],
    "source": [
     "#first load up the label dseg table\n",
-    "atlas='schaefer'\n",
+    "#atlas='schaefer'\n",
+    "atlas='brainnetome'\n",
     "\n",
     "df_labels = pd.read_csv(f'resources/atlas/atlas-{atlas}_dseg.tsv',sep='\\t')\n",
     "df_labels\n",
@@ -82,9 +83,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fc_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-schaefer_bold.pconn.nii'\n",
-    "sc_pattern='results/{dataset}/sub-{subject}/dwi/sub-{subject}_den-32k_atlas-schaefer_struc.pconn.nii'\n",
-    "sfc_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-schaefer_sfc.pscalar.nii'\n",
+    "# Schaefer Patterns\n",
+    "#fc_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-schaefer_bold.pconn.nii'\n",
+    "#sc_pattern='results/{dataset}/sub-{subject}/dwi/sub-{subject}_den-32k_atlas-schaefer_struc.pconn.nii'\n",
+    "#sfc_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-schaefer_sfc.pscalar.nii'\n",
+    "\n",
+    "# Brainnetome Patterns\n",
+    "# Schaefer Patterns\n",
+    "fc_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-brainnetome_bold.pconn.nii'\n",
+    "sc_pattern='results/{dataset}/sub-{subject}/dwi/sub-{subject}_den-32k_atlas-brainnetome_struc.pconn.nii'\n",
+    "sfc_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-brainnetome_sfc.pscalar.nii'\n",
     "\n",
     "\n"
    ]
@@ -428,10 +436,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fc_network_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-schaefer_netbold.pconn.nii'\n",
-    "sc_network_pattern='results/{dataset}/sub-{subject}/dwi/sub-{subject}_den-32k_atlas-schaefer_netstruc.pconn.nii'\n",
-    "sfc_network_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-schaefer_netsfc.pconn.nii'\n",
+    "# Schaefer patterns\n",
+    "#fc_network_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-schaefer_netbold.pconn.nii'\n",
+    "#sc_network_pattern='results/{dataset}/sub-{subject}/dwi/sub-{subject}_den-32k_atlas-schaefer_netstruc.pconn.nii'\n",
+    "#sfc_network_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-schaefer_netsfc.pconn.nii'\n",
     "\n",
+    "# Brainnetome Patterns\n",
+    "fc_network_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-brainnetome_netbold.pconn.nii'\n",
+    "sc_network_pattern='results/{dataset}/sub-{subject}/dwi/sub-{subject}_den-32k_atlas-brainnetome_netstruc.pconn.nii'\n",
+    "sfc_network_pattern='results/{dataset}/sub-{subject}/func/sub-{subject}_task-rest_den-32k_desc-preproc_denoise-24HMP8PhysSpikeReg_fwhm-5_atlas-brainnetome_netsfc.pconn.nii'\n",
     "\n",
     "datasets=['HCP','LOBE']"
    ]
@@ -473,6 +486,7 @@
     "num_parcels = nib.load(sfc_netpaths['LOBE'][0]).get_fdata().shape[1]\n",
     "\n",
     "for dataset in datasets:\n",
+    "\n",
     "    sfc[dataset] = np.concatenate(  [ nib.load(path).get_fdata().reshape((1,num_parcels,num_parcels))  for path in sfc_netpaths[dataset]] ,axis=0)  \n",
     "    #for path in sfc_netpaths[dataset]] ,axis=0)\n",
     "    fc[dataset] = np.concatenate(  [ nib.load(path).get_fdata().reshape((1,num_parcels,num_parcels))  for path in fc_netpaths[dataset]] ,axis=0)\n",
@@ -858,7 +872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
