updates with beluga local changes

--- a/notebooks/scratch_flipping_hemis.ipynb
+++ b/notebooks/scratch_flipping_hemis.ipynb
@@ -1837,6 +1837,74 @@
     "\n",
     "print(f\"Names have been saved to {output_file_path}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2d6fc06-493e-41c9-8e17-28f53d181e93",
+   "metadata": {},
+   "source": [
+    "## Manually updated extracted_net_names to have new mapping, now need to updated brainnetome_labels.txt to have new mapping in name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "29adec3c-c5d8-4a01-9d39-e4060345ed91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File has been updated and saved as '../resources/brainnetome/brainnetome_labels.txt'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Read the network names from the 'extracted_net_names.txt' file\n",
+    "with open('../resources/brainnetome/extracted_net_names.txt', 'r') as f:\n",
+    "    network_names = [line.strip() for line in f.readlines()]\n",
+    "\n",
+    "# Step 2: Read the 'brainnetome_labels.txt' file and store its lines\n",
+    "with open('../resources/brainnetome/brainnetome_labels.txt', 'r') as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "# Step 3: Prepare to replace network names in the labels\n",
+    "updated_lines = []\n",
+    "for i in range(0, len(lines), 2):  # Iterate over the lines in steps of 2 (name + data)\n",
+    "    name = lines[i].strip()  # Get the label name (e.g., L_A8m_Cont)\n",
+    "    data = lines[i+1]  # The corresponding data line\n",
+    "    \n",
+    "    # Replace the last part of the name with the appropriate network name\n",
+    "    # Get the current suffix (e.g., Cont, SalVentAttn) and replace it with the network name\n",
+    "    current_network = name.split('_')[-1]  # The last part (Cont, SalVentAttn, etc.)\n",
+    "    \n",
+    "    # Get the new network name from 'extracted_net_names.txt'\n",
+    "    network_name = network_names[i//2]  # Use integer division to map to the correct network name\n",
+    "    \n",
+    "    # Replace the old network suffix with the new one\n",
+    "    new_name = \"_\".join(name.split('_')[:-1]) + f\"_{network_name}\"  # Form the new name\n",
+    "    \n",
+    "    # Append the updated name and its data to the result\n",
+    "    updated_lines.append(new_name + '\\n')\n",
+    "    updated_lines.append(data)  # The data stays the same\n",
+    "\n",
+    "# Step 4: Write the updated lines to a new file or overwrite the original\n",
+    "with open('../resources/brainnetome/brainnetome_labels.txt', 'w') as f:\n",
+    "    f.writelines(updated_lines)\n",
+    "\n",
+    "print(\"File has been updated and saved as '../resources/brainnetome/brainnetome_labels.txt'.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bd16657-c0bf-4e06-a407-e924dfb80ba5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resources/brainnetome/cort_subcort_labellist.txt"
+   ]
   }
  ],
  "metadata": {
